<resources>
    <string name="app_name">ApplicationSQLite</string>
    <string name="authentification">Authentification</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hintlogin">Enter your email here</string>
    <string name="hintpassword">Enter your password here</string>
    <string name="signup">Sign up</string>
    <string name="tvSignUp">Sign Up</string>
    <string name="tvName2">Name</string>
    <string name="tvEmail2">Email</string>
    <string name="tvPassword2">Password</string>
    <string name="bValider2">Valider</string>
    <string name="bAjouter">Ajouter</string>
    <string name="bModifier">Modifier</string>
    <string name="bSupprimer">Supprimer</string>
    <string name="bretour">Retour</string>

</resources>